--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyDWruNu2MpLPCU6tzxcRm79hKqT5IVBzB8",
-    authDomain: "multiplayer-racing-e2773.firebaseapp.com",
-    databaseURL: "https://multiplayer-racing-e2773-default-rtdb.firebaseio.com",
-    projectId: "multiplayer-racing-e2773",
-    storageBucket: "multiplayer-racing-e2773.appspot.com",
-    messagingSenderId: "695142558940",
-    appId: "1:695142558940:web:68ef57282cb65bed8c1819"
+  const firebaseConfig = {
+    apiKey: "AIzaSyBUBOM8N0UHakQOWGC_qYh5omwrLlp_WPc",
+    authDomain: "multiplayer-car-racing-g-4c61e.firebaseapp.com",
+    databaseURL: "https://multiplayer-car-racing-g-4c61e-default-rtdb.firebaseio.com",
+    projectId: "multiplayer-car-racing-g-4c61e",
+    storageBucket: "multiplayer-car-racing-g-4c61e.appspot.com",
+    messagingSenderId: "676015907071",
+    appId: "1:676015907071:web:ca50e06c9ca0e5cae12cca"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
